# twitter-clone

./: README.md  Stuff.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: frontend_output.txt  package-lock.json  package.json
frontend/src/: root.tsx
frontend/src/components/: CreateTweetCard.tsx  TweetCard.tsx  (+2 more)
frontend/twitter-clone/: package-lock.json  package.json
requests/: test.rest
twitter-backend/: .env  Cargo.toml  Dockerfile  implicit-ratings.csv  server_output.txt
twitter-backend/src/: lib.rs  main.rs
twitter-backend/src/appstate/: handler.rs  mod.rs
twitter-backend/src/authentication/: errors.rs  middleware.rs  mod.rs
twitter-backend/src/config/: handler.rs  mod.rs
twitter-backend/src/errors/: auth.rs  profile.rs
twitter-backend/src/functions/: following.rs  mod.rs  profile.rs  tweet.rs  user.rs
twitter-backend/src/handlers/: about_handler.rs  auth_handler.rs  index_handler.rs  mod.rs  notification_handler.rs  timeline_handler.rs
twitter-backend/src/responses/: following.rs  mod.rs  profile.rs  reaction.rs  role.rs  tweet.rs  user.rs
twitter-backend/src/routes/: about_routes.rs  auth_routes.rs  bookmark_routes.rs  explore_routes.rs  follow_routes.rs  index_routes.rs  message_routes.rs  mod.rs  notification_routes.rs  profile_routes.rs  test_routes.rs  timeline_routes.rs  tweet_routes.rs
twitter-backend/src/schema/: following.rs  mod.rs  profile.rs  reaction.rs  role.rs  tweet.rs  user.rs
twitter-backend/tests/: test.rs
twitter-database/: .env  docker-compose.yaml
twitter-database/migrations/: 20230527102513_init.down.sql  20230527102513_init.up.sql
twitter-database/scripts/: .env  init_db.sh  schema.sql  setup_db.sh
twitter-frontend/: package-lock.json  package.json
twitter-frontend/src/: App.tsx
(+13 files in other folders)
