[package]
name = "twitter-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "macros", "mysql","chrono", "uuid", "offline"] }
chrono = { version = "0.4.24", features = ["serde"] }
# Our library
[lib]
path = "src/lib.rs"

# Our slim binary (only main function)
[[bin]]
path = "src/main.rs"
name = "twitter-backend"

[profile.dev]
incremental = true

[profile.release]
incremental = true
