[package]
name = "twitter-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "macros", "mysql","chrono", "uuid", "offline"] }
chrono = { version = "0.4.24", features = ["serde"] }
secrecy = "0.8.0"
base64 = "0.21.2"
jsonwebtoken = "8.3.0"
argon2 = "0.5.0"
uuid = "1.3.3"
env_logger = "0.10.0"
actix-cors = "0.6.4"
redis = {version = "0.23.0", features = ["tokio-comp", "connection-manager"]}
actix-session = {version= "0.7.2", features = ["redis-actor-session", "redis-rs-tls-session"]}
# Our library
[lib]
path = "src/lib.rs"

# Our slim binary (only main function)
[[bin]]
path = "src/main.rs"
name = "twitter-backend"

[profile.dev]
incremental = true

[profile.release]
incremental = true
